@@ -35,13 +35,18 @@ import java.security.interfaces.ECPrivateKey;
 import java.security.interfaces.RSAPrivateKey;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import javax.crypto.interfaces.DHPrivateKey;
-import org.bouncycastle.crypto.tls.Certificate;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.bouncycastle.tls.crypto.TlsCertificate;
 
 public class CertificateDelegate extends Delegate {
+
+    public static final int PREDEFINED_LEAF_CERT_INDEX = 0;
+
+    private static final Logger LOGGER = LogManager.getLogger();
 
     @Parameter(names = "-cert", description = "PEM encoded certificate file")
     private String certificate = null;
@@ -62,7 +67,9 @@ public class CertificateDelegate extends Delegate {
             description = "Alias of the key to be used from Java Key Store (JKS)")
     private String alias = null;
 
-    public CertificateDelegate() {}
+    public CertificateDelegate() {
+        // Default Constructor
+    }
 
     public String getKeystore() {
         return keystore;
@@ -115,7 +122,8 @@ public class CertificateDelegate extends Delegate {
         if (key != null) {
             LOGGER.debug("Loading private key");
             privateKey = PemUtil.readPrivateKey(new File(key));
-            adjustPrivateKey(config.getCertificateChainConfig().get(0), privateKey);
+            adjustPrivateKey(
+                    config.getCertificateChainConfig().get(PREDEFINED_LEAF_CERT_INDEX), privateKey);
         }
         if (certificate != null) {
             if (privateKey == null) {
@@ -132,9 +140,9 @@ public class CertificateDelegate extends Delegate {
             }
         }
         List<String> missingParameters = new ArrayList<>();
-        for (String p : mandatoryParameters.keySet()) {
-            if (mandatoryParameters.get(p) == null) {
-                missingParameters.add(p);
+        for (Map.Entry<String, String> entry : mandatoryParameters.entrySet()) {
+            if (entry.getValue() == null) {
+                missingParameters.add(entry.getKey());
             }
         }
         if (missingParameters.size() == 3) {
@@ -147,15 +155,12 @@ public class CertificateDelegate extends Delegate {
         }
         try {
             KeyStore store = KeystoreHandler.loadKeyStore(keystore, password);
-            Certificate cert = JKSLoader.loadTLSCertificate(store, alias);
+            TlsCertificate cert = JKSLoader.loadTLSCertificate(store, alias);
             privateKey = (PrivateKey) store.getKey(alias, password.toCharArray());
-            List<CertificateBytes> byteList = new LinkedList<>();
-            for (org.bouncycastle.asn1.x509.Certificate tempCert : cert.getCertificateList()) {
-                byteList.add(new CertificateBytes(tempCert.getEncoded()));
-            }
+            List<CertificateBytes> byteList = List.of(new CertificateBytes(cert.getEncoded()));
 
             config.setDefaultExplicitCertificateChain(byteList);
-            adjustPrivateKey(config.getCertificateChainConfig().get(0), privateKey);
+            adjustPrivateKey(config.getCertificateChainConfig().getFirst(), privateKey);
         } catch (UnrecoverableKeyException
                 | KeyStoreException
                 | IOException
@@ -186,8 +191,7 @@ public class CertificateDelegate extends Delegate {
             config.setEcPrivateKey(ecKey.getS());
             config.setDefaultSubjectNamedCurve(X509NamedCurve.getX509NamedCurve(ecKey));
         } else {
-            throw new UnsupportedOperationException(
-                    "This private key is not supporter:" + key.toString());
+            throw new UnsupportedOperationException("This private key is not supported:" + key);
         }
     }
 }
